Prevent Media Controls from hiding when the user is interacting via the keyboard

This CL prevents the controls from hiding by resetting the hide timer on events in two places:

1) Listening for focusin and input events on the MediaControls via defaultEventHandler, which get fired as the user tabs through the controls and as the user changes the timeline/volume sliders respectively.

2) Listening for keypress events on the media panel via adding an event listener to the panel element in MediaControlsMediaEventListener, which gets fired when the user mutes/unmutes, turns CC on/off, etc.

BUG=701440

Review-Url: https://codereview.chromium.org/2757323002
Cr-Commit-Position: refs/heads/master@{#462990}

Former-commit-id: 12df228997d26f76483eb438602b22897c24d094